db creation done, courses getting populated well

--- a/app/views/grades/new.html.haml
+++ b/app/views/grades/new.html.haml
@@ -1,1 +1,6 @@
-%h2 Hii
+%h2 Upload Grade file
+
+=form_tag grades_path, :multipart=>true, :method=>:post do
+	= label :grade, :title, 'Upload file'
+	= file_field_tag :file
+	= submit_tag 'Upload'
