use partials, add query by dept, fix ascii-utf error filled db with info from 2009 fall

--- a/app/views/grades/search.html.haml
+++ b/app/views/grades/search.html.haml
@@ -1,27 +1,4 @@
-%h2 Grade Search
-
-=form_tag :action=>'search'
-%table
-	%tbody
-		%tr
-			%td
-				= label :grade, :year, 'Year'
-				= text_field :grade, :year
-		%tr
-			%td
-				= label :grade, :sem, 'Sem'
-				= text_field :grade, :sem
-		%tr
-			%td
-				= label :grade, :courseno, 'Course'
-				= text_field :grade, :courseno
-		%tr
-			%td
-				= label :grade, :instructor, 'Instructor'
-				= text_field :grade, :instructor
-		%tr
-			%td
-				= submit_tag "Search"
+=render :partial=>'search_form'
 
 %h3 Search results
 -if @grades && @grades.count>0
@@ -32,6 +9,8 @@
 					Year
 				%th
 					Sem
+				%th
+					Dept
 				%th
 					Course
 				%th
@@ -65,7 +44,8 @@
 				%tr
 					%td=grade.year
 					%td=grade.sem
-					%td=grade.dept+' '+grade.courseno.to_s+'-'+grade.courseno2.to_s
+					%td=grade.dept
+					%td=grade.courseno.to_s+'-'+grade.courseno2.to_s
 					%td=grade.instructor
 					%td=grade.gpr
 					%td=grade.a
