--- a/app/views/grades/index.html.haml
+++ b/app/views/grades/index.html.haml
@@ -1,24 +1,1 @@
-%h2 Grade Search
-
-=form_tag :action=>'search'
-%table
-	%tbody
-		%tr
-			%td
-				= label :grade, :year, 'Year'
-				= text_field :grade, :year
-		%tr
-			%td
-				= label :grade, :sem, 'Sem'
-				= text_field :grade, :sem
-		%tr
-			%td
-				= label :grade, :courseno, 'Course'
-				= text_field :grade, :courseno
-		%tr
-			%td
-				= label :grade, :instructor, 'Instructor'
-				= text_field :grade, :instructor
-		%tr
-			%td
-				= submit_tag "Search"
+=render :partial=>'search_form'
