selectable year, sem, placeholders for textfields

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,11 @@
  *= require_tree .
  */
 
+table#title {
+	width: 100%;
+	background-color: lightblue;
+}
+
 table#search {
 	border-spacing: 2px;
 }
