--- a/app/views/grades/_search_form.html.haml
+++ b/app/views/grades/_search_form.html.haml
@@ -5,27 +5,27 @@
 			%td
 				= label :grade, :year, 'Year'
 			%td
-				= text_field :grade, :year
+				= select :grade, :year, {"Any"=>"", 2009=>2009, 2010=>2010, 2011=>2011, 2012=>2012, 2013=>2013, 2014=>2014, 2015=>2015}
 		%tr
 			%td
 				= label :grade, :sem, 'Sem'
 			%td
-				= text_field :grade, :sem
+				= select :grade, :sem, {"Any"=>"", "Fall"=>"FALL", "Spring"=>"SPRING", "Summer"=>"SUMMER"}
 		%tr
 			%td
 				= label :grade, :dept, 'Dept'
 			%td
-				= text_field :grade, :dept
+				= text_field :grade, :dept, :placeholder=>'CSCE or CS or PETE, etc'
 		%tr
 			%td
 				= label :grade, :courseno, 'Course'
 			%td
-				= text_field :grade, :courseno
+				= text_field :grade, :courseno, :placeholder=>'e.g., 605'
 		%tr
 			%td
 				= label :grade, :instructor, 'Instructor'
 			%td
-				= text_field :grade, :instructor
+				= text_field :grade, :instructor, :placeholder=>'prof. name'
 		%tr
 			%td
 				= submit_tag "Search"
