--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,7 @@
 		= stylesheet_link_tag 'application'
 		= javascript_include_tag 'application'
 		= csrf_meta_tags
-		%table.title
+		%table#title
 			%tbody
 				%tr
 					%td
