--- a/app/views/grades/_search_form.html.haml
+++ b/app/views/grades/_search_form.html.haml
@@ -25,7 +25,7 @@
 			%td
 				= label :grade, :instructor, 'Instructor'
 			%td
-				= text_field :grade, :instructor, :placeholder=>'prof. name'
+				= text_field :grade, :instructor, :placeholder=>'last name of prof.'
 		%tr
 			%td
 				= submit_tag "Search"
