--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,6 +21,16 @@ table#search {
 	border-spacing: 2px;
 }
 
+table#search td:nth-child(1){
+	font-weight: bold;
+}
+
+table#search td:nth-child(2){
+	font-style: italic;
+	font-size: 80%;
+	text-align: center;
+}
+
 table#results {
 	margin: 10px;
 	width: 80%;
