--- a/app/views/grades/_search_form.html.haml
+++ b/app/views/grades/_search_form.html.haml
@@ -6,27 +6,46 @@
 			%td
 				= label :grade, :year, 'Year'
 			%td
+				= label :grade, :year, '='
+			%td
 				= select :grade, :year, {"Any"=>"", 2009=>2009, 2010=>2010, 2011=>2011, 2012=>2012, 2013=>2013, 2014=>2014, 2015=>2015}
 		%tr
 			%td
 				= label :grade, :sem, 'Sem'
+			%td
+				= label :grade, :sem, '='
 			%td
 				= select :grade, :sem, {"Any"=>"", "Fall"=>"FALL", "Spring"=>"SPRING", "Summer"=>"SUMMER"}
 		%tr
 			%td
 				= label :grade, :dept, 'Dept'
 			%td
+				= label :grade, :dept, 'contains'
+			%td
 				= text_field :grade, :dept, :placeholder=>'CSCE or CS or PETE, etc'
 		%tr
 			%td
 				= label :grade, :courseno, 'Course'
 			%td
-				= text_field :grade, :courseno, :placeholder=>'e.g., 605'
+				= label :grade, :courseno, '='
+			%td
+				= text_field :grade, :courseno, :placeholder=>'605 or 6%, etc', :size=>10
+				= '-'
+				= text_field :grade, :courseno2, :placeholder=>'level e.g. 501', :size=>10
 		%tr
 			%td
 				= label :grade, :instructor, 'Instructor'
 			%td
+				= label :grade, :instructor, 'contains'
+			%td
 				= text_field :grade, :instructor, :placeholder=>'last name of prof.'
+		%tr
+			%td
+				= label :grade, :gpr, 'GPR'
+			%td
+				= label :grade, :gpr, '>='
+			%td
+				= text_field :grade, :gpr, :placeholder=>'3.2 or 2.8, etc'
 		%tr
 			%td
 				= submit_tag "Search"
