--- a/app/views/grades/_search_form.html.haml
+++ b/app/views/grades/_search_form.html.haml
@@ -19,15 +19,15 @@
 				= label :grade, :dept, 'Dept'
 			%td
 			%td
-				= text_field :grade, :dept, :placeholder=>'CSCE or CS or PETE, etc'
+				= text_field :grade, :dept, :placeholder=>'CS or MATH or ACCT, etc'
 		%tr
 			%td
 				= label :grade, :courseno, 'Course'
 			%td
 			%td
-				= text_field :grade, :courseno, :placeholder=>'605 or 6%, etc', :size=>10
+				= text_field :grade, :courseno, :placeholder=>'605 or 6%, etc', :size=>13
 				= '-'
-				= text_field :grade, :courseno2, :placeholder=>'level e.g. 501', :size=>10
+				= text_field :grade, :courseno2, :placeholder=>'level e.g. 501', :size=>13
 		%tr
 			%td
 				= label :grade, :instructor, 'Instructor'
