--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,5 +14,6 @@
 						=link_to 'about', '/about'
 
 	%body
+		%h4 Now you can search for Engineering, Business Administration and Science courses
 		#main
 			= yield
