fix precompile to run in prod mode, req for hosting

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,6 +19,6 @@
 						=link_to 'about', '/about'
 
 	%body
-		%h4 Update: Now you can search for TAMU Engineering, Business Administration and Science courses
+		%h4 Note: My aws free trial is ending this September. If you'd like to host this application for the next 1 year (won't cost you anything), please get in touch.
 		#main
 			= yield
