Add info about 2015 fall update

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,5 +19,6 @@
 						=link_to 'about', '/about'
 
 	%body
+		%h4 Updated grades till 2015 Fall for Engineering, Business, Science courses
 		#main
 			= yield
