--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,6 +19,6 @@
 						=link_to 'about', '/about'
 
 	%body
-		%h4 Updated grades till 2015 Fall for Engineering, Business, Science courses
+		%h4 Updated grades till 2015 Fall for Engineering, Business, Science, Architecture courses
 		#main
 			= yield
