--- a/app/views/grades/_search_form.html.haml
+++ b/app/views/grades/_search_form.html.haml
@@ -7,7 +7,7 @@
 				= label :grade, :year, 'Year'
 			%td
 			%td
-				= select :grade, :year, {"Any"=>"", 2009=>2009, 2010=>2010, 2011=>2011, 2012=>2012, 2013=>2013, 2014=>2014, 2015=>2015}
+				= select :grade, :year, {"Any"=>"", 2009=>2009, 2010=>2010, 2011=>2011, 2012=>2012, 2013=>2013, 2014=>2014, 2015=>2015, 2016=>2016}
 		%tr
 			%td
 				= label :grade, :sem, 'Sem'
